Implemented problem 3 solution

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
 
 
 .header {
+   background: linear-gradient(132deg, rgb(251, 165, 116) 0.00%, rgb(216, 245, 251) 100.00%);
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
